dist_man1_MANS=

if BUILD_DANXOMED
  dist_man1_MANS+=danxomed.1
endif

if ENABLE_QT
  dist_man1_MANS+=danxome-qt.1
endif

if BUILD_DANXOME_CLI
  dist_man1_MANS+=danxome-cli.1
endif

if BUILD_DANXOME_TX
  dist_man1_MANS+=danxome-tx.1
endif

if BUILD_DANXOME_UTIL
  dist_man1_MANS+=danxome-util.1
endif

if ENABLE_WALLET
if BUILD_DANXOME_WALLET
  dist_man1_MANS+=danxome-wallet.1
endif
endif
